# romea-ros2-joy

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_joy.repos  romea_joy_public.repos  romea_joystick.repos
config/: dualshock4.yaml  xbox.yaml
include/romea_joy/: joystick.hpp  joystick_axe.hpp  joystick_axis.hpp  joystick_button.hpp  joystick_configuration.hpp  joystick_directional_pad.hpp  joystick_mapping.hpp  joystick_remapping.hpp  joystick_stick.hpp  joystick_trigger.hpp
romea_joystick/: CMakeLists.txt  package.xml
romea_joystick_bringup/: CMakeLists.txt  README.md  package.xml
romea_joystick_bringup/config/joy/: joy_linux_node.yaml  joy_node.yaml
romea_joystick_bringup/config/pyinput_teleop/: pyinput_joy
romea_joystick_bringup/launch/: joystick_driver.launch.py
romea_joystick_bringup/launch/drivers/: joy.launch.py  joy.py  joy_linux.launch.py  pynput_teleop.launch.py
romea_joystick_bringup/python/: romea_joystick_bringup.py
romea_joystick_bringup/test/: test_joystick_bringup.py  test_joystick_bringup.yaml
romea_joystick_description/: CMakeLists.txt  README.md  package.xml
romea_joystick_description/config/: chengong_hj60ss.yaml  dualshock4_joy.yaml  keyboard_pynput_teleop.yaml  microsoft_xbox_joy.yaml  pynput_joy_pynput_teleop.yaml  sony_dualshock4_ds4_driver.yaml  xbox.yaml  xbox_joy_linux.yaml
romea_joystick_description/python/: romea_joystick_description.py
romea_joystick_description/test/: test_joystick_description.py
romea_joystick_meta_bringup/: CMakeLists.txt  README.md  package.xml
romea_joystick_meta_bringup/launch/: joystick.launch.py
romea_joystick_meta_bringup/profile/: joy.launch.py  joy_linux.launch.py  pynput_teleop.launch.py
romea_joystick_meta_bringup/python/: romea_joystick_meta_bringup.py
romea_joystick_meta_bringup/romea_joystick_meta_bringup/: meta_description.py  ros_launch.py
romea_joystick_meta_bringup/scripts/: generate_buttons_mapping_file.py  generate_joystick_mapping_file.py  generate_launch_file.py
romea_joystick_meta_bringup/test/: test_buttons_mapping.py  test_joystick_mapping.py  test_joystick_mapping.yaml  test_joystick_meta_bringup.py  test_joystick_meta_bringup.yaml
romea_joystick_utils/: CMakeLists.txt  README.md  package.xml
romea_joystick_utils/config/: chengong_hj60ss.yaml  dualshock4_mapping.yaml.autosave  microsoft_xbox.yaml  pynput_teleop.yaml  sony_dualshock4.yaml  sony_dualshock4_ds4_driver.yaml
romea_joystick_utils/include/romea_joystick_utils/: joystick.hpp  joystick_axe.hpp  joystick_button.hpp  joystick_configuration.hpp  joystick_directional_pad.hpp  joystick_remapping.hpp  joystick_stick.hpp  joystick_trigger.hpp
romea_joystick_utils/python/: romea_joystick_utils.py
romea_joystick_utils/src/: joystick.cpp  joystick_axe.cpp  joystick_button.cpp  joystick_configuration.cpp  joystick_directional_pad.cpp  joystick_remapping.cpp  joystick_stick.cpp  joystick_trigger.cpp
romea_joystick_utils/test/: CMakeLists.txt  button_test.cpp  configuration_test.cpp  joystick_test.cpp  remapping_test.cpp  remapping_test.py  stick_test.cpp  trigger_test.cpp
src/: joystick.cpp  joystick_axe.cpp  joystick_axis.cpp  joystick_button.cpp  joystick_configuration.cpp  joystick_directional_pad.cpp  joystick_mapping.cpp  joystick_remapping.cpp  joystick_stick.cpp  joystick_trigger.cpp
test/: CMakeLists.txt  button_test.cpp  configuration_test.cpp  joystick_test.cpp  mapping_test.cpp  remapping_test.cpp  stick_test.cpp  trigger_test.cpp
