<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_joy</name>
  <version>0.0.0</version>
  <description>Package romea_joy description</description>
  <maintainer email="jean.laneurit@inrae.fr">ros2004</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>romea_common_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

<!--<?xml version="1.0"?>-->
<!--<package format="2">-->

<!--<name>romea_joy</name>-->
<!--<version>0.1.0</version>-->
<!--<description>romea joy package</description>-->

<!--<maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>-->
<!--<author email="jean.laneurit@inrae.fr">Jean Laneurit</author>-->

<!--<license>BSD</license>-->

<!--<buildtool_depend>catkin</buildtool_depend>-->
<!--<build_depend>roslaunch</build_depend>-->
<!--<depend>roscpp</depend>-->
<!--<depend>sensor_msgs</depend>-->
<!--<depend>romea_common_utils</depend>-->

<!--</package>-->
